--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,3 @@
-
 apply plugin: 'com.android.application'
 
 android {
@@ -31,6 +30,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
     
     // ZXing (QR) - استخدام مكتبة أبسط مع embedded scanner
     implementation 'com.google.zxing:core:3.4.1'
