Fix QR code display and messaging functionality after QR scan. Added setRemoteIPForMessaging method to allow messaging without active call. Modified MessagingActivity to properly handle remote IP from QR scanning. Fixed QR code rendering by setting pixels correctly.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,13 +48,16 @@
             android:name=".QrActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivityUnified"
+            android:name=".MainActivityBeautiful"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivityUnified"
+            android:exported="false" />
         <!-- Keep the old MainActivity for reference, but it's no longer the launcher -->
         <activity
             android:name=".MainActivity"
